--- a/src/views/base.html.twig
+++ b/src/views/base.html.twig
@@ -2,7 +2,7 @@
 <html lang="en">
 
     <head>
-        <title>{% block title %}TicketHub Home Page{% endblock %}</title>
+        <title>{% block title %}AllBooks. Reviews of All Books{% endblock %}</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -37,8 +37,8 @@
                     <div class="pure-menu">
 
                         <a href="/" class="pure-menu-heading custom-brand">
-                            <img alt="FansVoice logo" class="logo" src="/img/logo2.png"/>
-                            FansVoice
+                            <img alt="AllBooks logo" class="logo" src="/img/logo2.png"/>
+                            AllBooks
                         </a>
                         <a href="#" class="custom-toggle" id="toggle"><s class="bar"></s><s class="bar"></s></a>
                     </div>
@@ -73,7 +73,6 @@
                     <ul>
                         <li><a href="/page/about">About us</a></li>
                         <li><a href="/page/privacy-policy">Privacy Policy</a></li>
-                        <li><a href="/page/contact">Contact</a></li>
                     </ul>
                 </div>
                 </div>
