--- a/src/views/home.html.twig
+++ b/src/views/home.html.twig
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>{% block title %}FansVoice. We need to hear your voice{% endblock %}</title>
+    <title>{% block title %}AllBooks. Reviews of All Books{% endblock %}</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
