--- a/src/views/base.html.twig
+++ b/src/views/base.html.twig
@@ -37,7 +37,7 @@
                     <div class="pure-menu">
 
                         <a href="/" class="pure-menu-heading custom-brand">
-                            <img alt="AllBooks logo" class="logo" src="/img/logo2.png"/>
+                            <img alt="AllBooks logo" class="logo" src="/img/logo3.png"/>
                             AllBooks
                         </a>
                         <a href="#" class="custom-toggle" id="toggle"><s class="bar"></s><s class="bar"></s></a>
@@ -53,7 +53,7 @@
                 <div class="pure-u-1 pure-u-md-2-5">
                     <div class="pure-menu pure-menu-horizontal custom-menu-3 custom-can-transform">
                         <ul class="pure-menu-list">
-                            <li class="pure-menu-item"><a href="/category/1" class="pure-menu-link">Imagination</a></li>
+                            <li class="pure-menu-item"><a href="/category/2" class="pure-menu-link">Classics</a></li>
                        
                         </ul>
                     </div>
