home page minor fixes

--- a/src/views/home.html.twig
+++ b/src/views/home.html.twig
@@ -107,10 +107,10 @@
 				<b>Popular Categories</b>
 				<ul>
 					
-						<li><a href="/category/16">Rock & Pop</a></li>
-						<li><a href="/category/18">Musicals</a></li>
-						<li><a href="/category/19">Rap & Hip-Hop</a></li>
-						<li><a href="/category/20">Alternative Rock</a></li>
+						<li><a href="/category/48">Literature</a></li>
+						<li><a href="/category/3">Fiction</a></li>
+						<li><a href="/category/5">Historical</a></li>
+						<li><a href="/category/26">Science Fiction</a></li>
 					
 				</ul>
 			</div>
